fdo#73764 partially revert 3998d1abb291

Change-Id: Ie9b6d6a318fad256f3f0999fe9c0810a4323f10d